fixed login image overlay issue with z-index for .js-sign-in and img in css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -136,7 +136,8 @@
   color: #069BCC;
   font-family: 'PT Mono', cursive;
   text-transform: lowercase;
-  padding-right: 60px;
+  padding-right: 40px;
+  white-space: nowrap;
   display: inline;
   border-right: 3px solid #fff;
 }
