--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -8,6 +8,7 @@ img {
   position: absolute;
   top: 5%;
   left: 50%;
+  z-index: 0;
 }
 
 /*.gradient {
@@ -16,10 +17,15 @@ img {
 
 }*/
 
+.js-sign-in {
+  position: relative;
+  z-index: 10;
+}
+
 .sign-in-page, .signup-page {
   width: 100%;
   height: 100%;
-      background-image: -o-linear-gradient(bottom, rgb(255, 255, 255) 24%, rgb(255,255,255) 62%);
+  background-image: -o-linear-gradient(bottom, rgb(255, 255, 255) 24%, rgb(255,255,255) 62%);
   background-image: -ms-radial-gradient(center top, ellipse farthest-corner, #fff 0%, #eee 100%);
   background-image: -moz-radial-gradient(center top, ellipse farthest-corner, #fff 0%, #eee 100%);
   background-image: -o-radial-gradient(center top, ellipse farthest-corner, #fff 0%, #eee 100%);
